# numpy-hirschberg

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
numpy_hirschberg/: __init__.py  align.py  types.py
tests/: distance.py  test_align.py  test_geo_distance.py  test_linear_search.py  test_match_distance.py  test_numpy_hirschberg.py  test_score_matrix.py  test_symbol_distance.py
