[tool.poetry]
name = "numpy-hirschberg"
version = "0.1.1"
description = ""
authors = ["Grigorii Batalov <grisxa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.12b0"
coverage = {extras = ["toml"], version = "^6.2"}
mypy = "^0.931"
mypy-extensions = "^0.4.3"
pep8-naming = "^0.12.1"
pylama_pylint = "^3.1.1"
pylint = "^2.12.2"
radon = "^5.1.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
command_line = "-m pytest"
data_file = "coverage/.coverage_data"
omit = ["*/venv/*", "tests/test_*"]

[tool.coverage.html]
directory = "coverage"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--strict-markers --cov=. --cov-report html"
